React-wrapped oncoprint component

Former-commit-id: d4d550150ca967d475294d26db09c725c80b7dff
